z-index socials fix

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -115,7 +115,7 @@
 	position: fixed;
 	bottom: 20px;
 	right: 20px;
-	z-index: 3;
+	z-index: 11;
 	-webkit-transition: opacity .3s;
 	transition: opacity .3s;
 }
